fix: prevent page overflowing in ie

--- a/html_project/scss/components/_contact.scss
+++ b/html_project/scss/components/_contact.scss
@@ -90,8 +90,14 @@
       flex-basis: 50%;
     }
 
+    @media screen and (min-width: map-get($breakpoints, tablet)) {
+      height: 50%;
+      flex-basis: auto;
+    }
+
     @media screen and (min-width: map-get($breakpoints, desktop)) {
       width: 50%;
+      height: auto;
     }
   }
 }
