--- a/html_project/scss/components/_visit-office.scss
+++ b/html_project/scss/components/_visit-office.scss
@@ -11,7 +11,6 @@
   }
 
   &__wrapper {
-    overflow: hidden;
 
     @media screen and (min-width: map-get($breakpoints, tablet)) and (max-width: map-get($breakpoints, desktop) - 1px) {
       max-height: 250px;
